--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "string": "cpp",
-        "xqy_utils.h": "c"
+        "xqy_utils.h": "c",
+        "iostream": "cpp"
     }
 }
