--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "xqy_utils.h": "c",
         "iostream": "cpp",
         "iosfwd": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "/home/huinaibing/huinaibingLinux/cpp_code/ask_grade"
 }
