--- a/python_code/bigHomeWork/pyproject.toml
+++ b/python_code/bigHomeWork/pyproject.toml
@@ -1,14 +1,15 @@
 # 安装的设置文件
 [project]
 name = "quadrotorSimulator"
-version = "0.1.0"
+version = "11.45.14"
 authors = [
     {name = "Qiuyu Xia", email = "huinaibing@mails.ccnu.edu.cn"}
 ]
 dependencies = [
     "numpy",
     "torch",
-    "gymnasium"
+    "gymnasium",
+    "matplotlib"
 ]
 
 [build-system]
