finish code but README not yet

--- a/python_code/bigHomeWork/pyproject.toml
+++ b/python_code/bigHomeWork/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "numpy",
     "torch",
     "gymnasium",
-    "matplotlib"
+    "matplotlib",
+    "stable_baselines3",
+    "tensorboard"
 ]
 
 [build-system]
